--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/SchulichRacingElectrical/SVDatabaseMS#readme",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "api-key-auth": "^0.2.2",
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.5",
